--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
 									<a>
 										<h2>A Breath Of Blue</h2>
 										<div class="content">
-											<p>Status: Giveaway</p>
+											<p>Status: Giveaway on Discord</p>
 										</div>
-									</a>
+									</a href="https://discord.gg/cnft">
 								</article>
 								<article class="style4">
 									<span class="image">
 										<img src="images/Taking a shower.jpg" alt="" />
 									</span>
-									<a>
+									<a href="https://twitter.com/ArtGallery__AI/status/1432365980093763585">
 										<h2>Taking A Shower</h2>
 										<div class="content">
-											<p>Status: Giveaway</p>
+											<p>Status: Giveaway on Twitter</p>
 										</div>
 									</a>
 								</article>
@@ -131,10 +131,10 @@
 									<span class="image">
 										<img src="images/Blue Blob.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/G76xV8">
+									<a >
 										<h2>Blue Blob</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -153,10 +153,10 @@
 									<span class="image">
 										<img src="images/Broken Doors.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/VyOrVW">
+									<a >
 										<h2>Broken Doors</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -164,10 +164,10 @@
 									<span class="image">
 										<img src="images/Cancerous brownie.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/Rr6nVK">
+									<a >
 										<h2>Cancerous Brownie</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -175,10 +175,10 @@
 									<span class="image">
 										<img src="images/Cracks in the wall.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/Ll9DVA">
+									<a >
 										<h2>Cracks In The Wall</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -186,10 +186,10 @@
 									<span class="image">
 										<img src="images/cubed orange.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/yOP5vP">
+									<a >
 										<h2>Cubed Orange</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -197,10 +197,10 @@
 									<span class="image">
 										<img src="images/Desert.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/zNp5wm">
+									<a >
 										<h2>Desert</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -219,10 +219,10 @@
 									<span class="image">
 										<img src="images/Evolution of Avocado.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/Nnkj6p">
+									<a >
 										<h2>Evolution Of An Avocado</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -230,10 +230,10 @@
 									<span class="image">
 										<img src="images/Granite.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/QqWm8L">
+									<a >
 										<h2>Granite</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -252,10 +252,10 @@
 									<span class="image">
 										<img src="images/Teachers bag.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/lVYLgg">
+									<a>
 										<h2>Teacher Bag</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -285,10 +285,10 @@
 									<span class="image">
 										<img src="images/Nothing to see here.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/PpNlVW">
+									<a >
 										<h2>Nothing To See Here</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -296,10 +296,10 @@
 									<span class="image">
 										<img src="images/Nuggets.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/Jj6A9P">
+									<a >
 										<h2>Nuggets</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -329,10 +329,10 @@
 									<span class="image">
 										<img src="images/Pool.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/gVJKEG">
+									<a >
 										<h2>Pool</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -340,10 +340,10 @@
 									<span class="image">
 										<img src="images/Red Eyes.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/w8p5wM">
+									<a >
 										<h2>Red Eyes</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -362,10 +362,10 @@
 									<span class="image">
 										<img src="images/Stripes no stars.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/kVRKLN">
+									<a >
 										<h2>Stripes, No Stars</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -373,10 +373,10 @@
 									<span class="image">
 										<img src="images/Red Egg.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/OoYk0L">
+									<a >
 										<h2>Red Egg</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -384,10 +384,10 @@
 									<span class="image">
 										<img src="images/Stacked Pots.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/jVRMKP">
+									<a >
 										<h2>Stacked Pots</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
@@ -395,10 +395,10 @@
 									<span class="image">
 										<img src="images/Rose foam.jpg" alt="" />
 									</span>
-									<a href="https://tokhun.io/marketplace/Mm8gV5">
+									<a >
 										<h2>Rosé Foam</h2>
 										<div class="content">
-											<p>Status: available on Tokhun.io</p>
+											<p>Status: Sold</p>
 										</div>
 									</a>
 								</article>
