--- a/alonzo.html
+++ b/alonzo.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ArtGallery_AI Home</title>
+		<title>ArtGallery_AI Alonzo Series</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Header -->
+				 <!-- Header -->
 					<header id="header">
 						<div class="inner">
 
@@ -39,8 +39,8 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="batchone.html">Batch #1</a></li>
-                            <li><a href="alonzo.html">Alonzo Series</a></li>
                             <li><a href="policies.html">Policies</a></li>
 						</ul>
 					</nav>
@@ -48,45 +48,19 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<h1>AI generated Artwork as NFT on the <a href="https://cardano.org/">Cardano</a> Blockchain.</h1>
-                                <p>ArtGallery_AI brings Art imagined by a GAN (Generative Adversarial Network) to Cardano. </p>
-                                <span class="image main"><img src="images/gallery.jpg" alt="" /></span>
-                                </header>
-                            <div id="main">
-						<div class="inner">
-							<h2>About ArtGallery_AI</h2>
-                            <p>We bring art imagined by a GAN (Generative Adversarial Network) to Cardano. Made with love and passion, on Earth! This is our first step into the NFT world, and which Blockchain could be better than Cardano?</p>
-                            <h2>What are GANs?</h2>
-                            <p>GANs are a class of machine learning frameworks designed by Ian Goodfellow and his colleagues in 2014. Two neural networks contest with each other in a game (in the form of a zero-sum game, where one agent's gain is another agent's loss). Given a training set, this technique learns to generate new data with the same statistics as the training set. For example, a GAN trained on abstract art can generate new paintings of abstract art that look at least superficially authentic to human observers, having many realistic characteristics. </p>
+							<h1>Alonzo Series</h1>
 
-                            <h2>Batch #1</h2>
-                            <p>50 unique NFTs: SOLD OUT!<br>
-                                    Common: Minted 35 times  <br>
-                                    Rare (Golden Frame): 10  <br>
-                                    Epic (Black Frame): 5  </p>
-                            <p>Batch #1 was our first step into the CNFT universe - thanks to everybody, who made it possible </p>
-
-
-                            <h2>Alonzo Series</h2>
                             <p>It is our way to express the anticipation for the Alonzo hardfork. <br>
                             The Alonzo Series are 35 unique, animated, AI generated video sequences.<br>
                             They will be available to mint starting <b>Monday, Sept 13th, 6 pm UTC.</b>  </p>
-                            <h2>Batch #2</h2>
-                            <p>Batch #2 will be released in the next few weeks. Every early bird (holders of min. 1 NFT from Batch #1) has the chance to win a NFT of the upcoming batch. Get your "ticket" now!</p>
-                            <p>??? unique NFTs: <br>
-                            Common: ?? available to mint starting Sept. ??, ?? UTC <br>
-                            Rare: ?? available to mint starting Sept. ??, ?? UTC <br>
-                            Epic: ?? available to mint starting Sept. ??, ?? UTC </p>
-						</div>
-					</div>
 
 
 						</div>
 					</div>
+
 
 				<!-- Footer -->
-                <footer id="footer">
+					<footer id="footer">
                         <div class="inner">
                             <section>
                                 <h2>Powered by</h2>
@@ -107,9 +81,6 @@
                             </ul>
                         </div>
                     </footer>
-
-
-
 
 			</div>
 
