--- a/policies.html
+++ b/policies.html
@@ -43,7 +43,8 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
+							<li><a href="batchone.html">Batch #1</a></li>
+                            <li><a href="alonzo.html">Alonzo Series</a></li>
 						</ul>
 					</nav>
 
@@ -52,9 +53,9 @@
 						<div class="inner">
 							<h1>Policies</h1>
 							<span class="image main"><img src="images/Gallery.jpg" alt="" /></span>
-                            <h2>Rare and Epic Tier</h2>
+                            <h2>Rare and Epic Tier/Alonzo Series - all NFTs under one policy</h2>
                             <p>a0c798f2912c548872cbb31eea47f1c2a8f6895813b4281941642c2b</p>
-                            <h2>Common Tier</h2>
+                            <h2>Common Tier - each NFT has its own policy</h2>
                             <p>10169965f7cb96d1cd4ac669bd9fa2fd9c630f839a58670e82fcd05a<br>
 							16a95449818ceecfb31ea36efd98537f95063c1d7772af33d54e4acc<br>
 							1db5d4db2b30a97b4322a358ed03cec5673aa46b775d3e126048aaf9<br>
