--- a/batchone.html
+++ b/batchone.html
@@ -482,7 +482,7 @@
                                 </article>
                                 <article class="style4">
                                     <span class="image">
-                                        <img src="images/circus artist.png" alt="" />
+                                        <img src="images/circus artists.png" alt="" />
                                     </span>
                                     <a>
                                         <h2>Circus Artist</h2>
@@ -496,9 +496,9 @@
                                         <img src="images/club des Haschischin.png" alt="" />
                                     </span>
                                     <a >
-                                        <h2>Pool</h2>
+                                        <h2>Club Des Hashischins</h2>
                                         <div class="content">
-                                            <p>Status: Club Des Hashischins</p>
+                                            <p>Status: Sold</p>
                                         </div>
                                     </a>
                                 </article>
