--- a/alonzo.html
+++ b/alonzo.html
@@ -65,7 +65,7 @@
                             <section>
                                 <h2>Powered by</h2>
                                 <a href="https://cardano.org/" class="image">
-                                    <span class="image"><img src="images/cardano.svg" alt="" /></span>
+                                    <span class="image"><img src="images/Cardano.svg" alt="" /></span>
                                 </a>
                             </section>
                             <section>
