--- a/policies.html
+++ b/policies.html
@@ -96,33 +96,26 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<div class="inner">
-							<section>
-								<ul>
+                        <div class="inner">
+                            <section>
                                 <h2>Powered by</h2>
-                                <a href="https://cardano.org/" >
-									<img src="images/cardano.svg" style="width: 100px"  alt="" />
-								</a>
-                                </ul>
-                                <ul>
-                                <a href="https://namiwallet.io/" class="logo">
-									<img src="images/nami.svg" style="width: 100px"  alt="" />
-								</a>
-                                </ul>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
+                                <a href="https://cardano.org/" class="image">
+                                    <span class="image"><img src="images/Cardano.svg" alt="" /></span>
+                                </a>
+                            </section>
+                            <section>
+                                <h2>Follow</h2>
+                                <ul class="icons">
                                 <li><a href="https://twitter.com/ArtGallery__AI" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
                                 <li><a href="https://discord.gg/xzmYbpQetc" class="icon brands style2 fa-discord"><span class="label">Discord</span></a></li>
                                 <li><a href="https://t.me/ArtGallery_AI" class="icon brands style2 fa-telegram"><span class="label">Telegram</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; ArtGallery_AI. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+                                </ul>
+                            </section>
+                            <ul class="copyright">
+                                <li>&copy; ArtGallery_AI. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                            </ul>
+                        </div>
+                    </footer>
 
 			</div>
 
