--- a/policies.html
+++ b/policies.html
@@ -100,7 +100,7 @@
                             <section>
                                 <h2>Powered by</h2>
                                 <a href="https://cardano.org/" class="image">
-                                    <span class="image"><img src="images/Cardano.svg" alt="" /></span>
+                                    <span class="image"><img src="images/Cardano.png" alt="" /></span>
                                 </a>
                             </section>
                             <section>
