--- a/alonzo.html
+++ b/alonzo.html
@@ -54,7 +54,41 @@
                             The Alonzo Series are 35 unique, animated, AI generated video sequences.<br>
                             They will be available to mint starting <b>Monday, Sept 13th, 6 pm UTC.</b>  </p>
 
-
+                            <section class="tiles">
+                                <article class="style1">
+                                    <span class="image">
+                                        <img src="images/1.gif" alt="" />
+                                    </span>
+                                    <a>
+                                        <h2>Jungle Moist</h2>
+                                        <div class="content">
+                                            <p>Status: soon to mint</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="style2">
+                                    <span class="image">
+                                        <img src="images/2.gif" alt="" />
+                                    </span>
+                                    <a>
+                                        <h2>Tower To Babylon</h2>
+                                        <div class="content">
+                                            <p>Status: soon to mint</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="style3">
+                                    <span class="image">
+                                        <img src="images/3.gif" alt="" />
+                                    </span>
+                                    <a>
+                                        <h2>Trees</h2>
+                                        <div class="content">
+                                            <p>Status: soon to mint</p>
+                                        </div>
+                                    </a>
+                                </article>
+                            </section>
 						</div>
 					</div>
 
