--- a/alonzo.html
+++ b/alonzo.html
@@ -54,6 +54,8 @@
                             The Alonzo Series are 35 unique, animated, AI generated video sequences.<br>
                             They will be available to mint starting <b>Monday, Sept 13th, 6 pm UTC.</b>  </p>
 
+                            <h2>We are currently running into technical issues and waiting for the admins assistance. It is very difficult for us to have to announce it but unfortunately we have to delay the drop! Sorry about the circumstances, please accept my most sincere apologies! There is no ETA yet, but will make sure to announce the new drop date 12 hours beforehand on our webpage, in our discord and our telegram - so that everybody has a fair chance! </h2>
+
                             <section class="tiles">
                                 <article class="style1">
                                     <span class="image">
