--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                                 </header>
                             <div id="main">
 						<div class="inner">
+
+                        <h2>We are currently running into technical issues and waiting for the admins assistance. It is very difficult for us to have to announce it but unfortunately we have to delay the drop! Sorry about the circumstances, please accept my most sincere apologies! There is no ETA yet, but will make sure to announce the new drop date 12 hours beforehand on our webpage, in our discord and our telegram - so that everybody has a fair chance! </h2>
+
 							<h2>About ArtGallery_AI</h2>
                             <p>We bring art imagined by a GAN (Generative Adversarial Network) to Cardano. Made with love and passion, on Earth! This is our first step into the NFT world, and which Blockchain could be better than Cardano?</p>
                             <h2>What are GANs?</h2>
