--- a/alonzo.html
+++ b/alonzo.html
@@ -52,9 +52,14 @@
 
                             <p>It is our way to express the anticipation for the Alonzo hardfork. <br>
                             The Alonzo Series are 35 unique, animated, AI generated video sequences.<br>
-                            They will be available to mint starting <b>Monday, Sept 13th, 6 pm UTC.</b>  </p>
+                            They will be available to mint starting <b>Wednesday, Sept 15th, 5 am UTC.</b><br></p>
+                            <h2>Details:</h2>
+                            <p>Mintage: 35 NFTs (max buy: 1 NFT!)<br>
+                            Price: 30 ADA (make sure to send exactly the specified amount, otherwise you will be refunded)<br></p>
 
-                            <h2>We are currently running into technical issues and waiting for the admins assistance. It is very difficult for us to have to announce it but unfortunately we have to delay the drop! Sorry about the circumstances, please accept my most sincere apologies! There is no ETA yet, but will make sure to announce the new drop date 12 hours beforehand on our webpage, in our discord and our telegram - so that everybody has a fair chance! </h2>
+                            <a href="https://easycnft.art/en/flash/668"><b>Click here to mint one!</b></a> <br>  <br>
+
+
 
                             <section class="tiles">
                                 <article class="style1">
