--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <div id="main">
 						<div class="inner">
 
-                        <h2>We are currently running into technical issues and waiting for the admins assistance. It is very difficult for us to have to announce it but unfortunately we have to delay the drop! Sorry about the circumstances, please accept my most sincere apologies! There is no ETA yet, but will make sure to announce the new drop date 12 hours beforehand on our webpage, in our discord and our telegram - so that everybody has a fair chance! </h2>
+
 
 							<h2>About ArtGallery_AI</h2>
                             <p>We bring art imagined by a GAN (Generative Adversarial Network) to Cardano. Made with love and passion, on Earth! This is our first step into the NFT world, and which Blockchain could be better than Cardano?</p>
@@ -74,7 +74,7 @@
                             <h2>Alonzo Series</h2>
                             <p>It is our way to express the anticipation for the Alonzo hardfork. <br>
                             The Alonzo Series are 35 unique, animated, AI generated video sequences.<br>
-                            They will be available to mint starting <b>Monday, Sept 13th, 6 pm UTC.</b>  </p>
+                            They will be available to mint starting <b>Wednesday, Sept 15th, 5 am UTC.</b>  </p>
                             <h2>Batch #2</h2>
                             <p>Batch #2 will be released in the next few weeks. Every early bird (holders of min. 1 NFT from Batch #1) has the chance to win a NFT of the upcoming batch. Get your "ticket" now!</p>
                             <p>??? unique NFTs: <br>
