--- a/alonzo.html
+++ b/alonzo.html
@@ -41,6 +41,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="batchone.html">Batch #1</a></li>
+                            <li><a href="batchtwo.html">Batch #2</a></li>
                             <li><a href="policies.html">Policies</a></li>
 						</ul>
 					</nav>
@@ -50,14 +51,10 @@
 						<div class="inner">
 							<h1>Alonzo Series</h1>
 
-                            <p>It is our way to express the anticipation for the Alonzo hardfork. <br>
+                            <p>35 unique animated NFTs: SOLD OUT!<br> It is our way to express the anticipation for the Alonzo hardfork. <br>
                             The Alonzo Series are 35 unique, animated, AI generated video sequences.<br>
-                            They will be available to mint starting <b>Wednesday, Sept 15th, 5 am UTC.</b><br></p>
-                            <h2>Details:</h2>
-                            <p>Mintage: 35 NFTs (max buy: 1 NFT!)<br>
-                            Price: 30 ADA (make sure to send exactly the specified amount, otherwise you will be refunded)<br></p>
+                            </p>
 
-                            <a href="https://easycnft.art/en/flash/668"><b>Click here to mint one!</b></a> <br>  <br>
 
 
 
