--- a/batchtwo.html
+++ b/batchtwo.html
@@ -6,7 +6,7 @@
 -->
 <html>
     <head>
-        <title>ArtGallery_AI Batch #1</title>
+        <title>ArtGallery_AI Batch #2</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/main.css" />
@@ -40,7 +40,7 @@
                         <h2>Menu</h2>
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="batchtwo.html">Batch #2</a></li>
+                            <li><a href="batchone.html">Batch #1</a></li>
                             <li><a href="alonzo.html">Alonzo Series</a></li>
                             <li><a href="policies.html">Policies</a></li>
                                                     </ul>
@@ -50,11 +50,11 @@
                     <div id="main">
                         <div class="inner">
                             <header>
-                                <h1>Batch #1</h1>
-                                <p>All rarities sold out! </p>
-
-                                </header>
-                                <h2>Common</h2>
+                                <h1>Batch #2</h1>
+                                <p>Ready to mint from Sunday, 26th Sept., 18.00 pm UTC </p>
+                    <!--              <a href="https://easycnft.art/en/flash/***">Mint here</a></li>     -->
+                               </header>
+                    <!--             <h2>Common</h2>
                                 <ul> <section class="tiles">
                                 <article class="style1">
                                     <span class="image">
@@ -619,7 +619,7 @@
                                     </a>
                                 </article>
                             </section>
-                            </ul>
+                            </ul>    -->
                         </div>
                     </div>
 
