--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="batchone.html">Batch #1</a></li>
+                            <li><a href="batchtwo.html">Batch #2</a></li>
                             <li><a href="alonzo.html">Alonzo Series</a></li>
                             <li><a href="policies.html">Policies</a></li>
 						</ul>
@@ -72,15 +73,17 @@
 
 
                             <h2>Alonzo Series</h2>
-                            <p>It is our way to express the anticipation for the Alonzo hardfork. <br>
+                            <p>35 unique animated NFTs: SOLD OUT!<br> It is our way to express the anticipation for the Alonzo hardfork. <br>
                             The Alonzo Series are 35 unique, animated, AI generated video sequences.<br>
-                            They will be available to mint starting <b>Wednesday, Sept 15th, 5 am UTC.</b>  </p>
+                            </p>
+                            <h2>Landscape Series</h2>
+                            <p>20 unique NFTs: SOLD OUT!<br> This batch was an exclusive drop for the first 40 members of our discord server. <br>
+                            </p>
+
                             <h2>Batch #2</h2>
-                            <p>Batch #2 will be released in the next few weeks. Every early bird (holders of min. 1 NFT from Batch #1) has the chance to win a NFT of the upcoming batch. Get your "ticket" now!</p>
-                            <p>??? unique NFTs: <br>
-                            Common: ?? available to mint starting Sept. ??, ?? UTC <br>
-                            Rare: ?? available to mint starting Sept. ??, ?? UTC <br>
-                            Epic: ?? available to mint starting Sept. ??, ?? UTC </p>
+                            <p>Batch #2 will be released soon. Every holder of a NFT from Batch #1 has the chance to win a NFT from the upcoming batch - we will do a raffle in the beginning of October.</p>
+                            <p>135 unique NFTs: <br>
+                            They will be available to mint starting <b>Sunday, Sept 26th, 6 pm UTC.</b> </p>
 						</div>
 					</div>
 
