--- a/policies.html
+++ b/policies.html
@@ -44,6 +44,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="batchone.html">Batch #1</a></li>
+                            <li><a href="batchtwo.html">Batch #2</a></li>
                             <li><a href="alonzo.html">Alonzo Series</a></li>
 						</ul>
 					</nav>
@@ -53,7 +54,7 @@
 						<div class="inner">
 							<h1>Policies</h1>
 							<span class="image main"><img src="images/Gallery.jpg" alt="" /></span>
-                            <h2>Rare and Epic Tier/Alonzo Series - all NFTs under one policy</h2>
+                            <h2>Rare and Epic Tier of Batch #1/Alonzo Series/Batch #2 - all NFTs under one policy</h2>
                             <p>a0c798f2912c548872cbb31eea47f1c2a8f6895813b4281941642c2b</p>
                             <h2>Common Tier - each NFT has its own policy</h2>
                             <p>10169965f7cb96d1cd4ac669bd9fa2fd9c630f839a58670e82fcd05a<br>
