--- a/batchtwo.html
+++ b/batchtwo.html
@@ -52,7 +52,7 @@
                             <header>
                                 <h1>Batch #2</h1>
                                 <p>Ready to mint from Sunday, 26th Sept., 18.00 pm UTC </p>
-                    <!--              <a href="https://easycnft.art/en/flash/***">Mint here</a></li>     -->
+                                <a href="https://easycnft.art/en/flash/908">Mint here</a></li>     
                                </header>
                     <!--             <h2>Common</h2>
                                 <ul> <section class="tiles">
@@ -391,7 +391,7 @@
                                         <img src="images/Rose foam.jpg" alt="" />
                                     </span>
                                     <a >
-                                        <h2>Rosé Foam</h2>
+                                        <h2>RosÃ© Foam</h2>
                                         <div class="content">
                                             <p>Status: Sold</p>
                                         </div>
